--- a/src/app/pages/supplier/articles/edit-article-description/edit-article-description.component.html
+++ b/src/app/pages/supplier/articles/edit-article-description/edit-article-description.component.html
@@ -58,6 +58,7 @@
           </div>
         </div>
         <div class="col-lg-4">
+          <app-attributes [articleId]="id" [product-attributes]="productAttributes"></app-attributes>
         </div>
       </div>
     </form>
