Add link in sidebar

--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -42,6 +42,12 @@
       <li><a routerLink="/supplier/article/review" routerLinkActive="active">Attente de MAJ</a></li>
     </ul>
   </li>
+  <li routerLinkActive="active">
+    <a [routerLink]="['/annonces']" routerLinkActive="active">
+      <i class="sidebar-item-icon ti-layers-alt"></i>
+      <span class="nav-label">Annonces</span>
+    </a>
+  </li>
   <li routerLinkActive="active" style="display: none;">
     <a href="href=&quot;javascript:;&quot;">
       <i class="sidebar-item-icon ti-layers-alt"></i>
