--- a/src/app/pages/good-deal/good-deal-lists/good-deal-lists.component.html
+++ b/src/app/pages/good-deal/good-deal-lists/good-deal-lists.component.html
@@ -1,3 +1,27 @@
-<p>
-  good-deal-lists works!
-</p>
+<div class="page-content fade-in-up">
+  <div class="ibox">
+    <div class="ibox-body">
+      <h5 class="font-strong mb-4">LES ANNONCES</h5>
+      <div class="flexbox mb-4">
+        <div class="flexbox">
+        </div>
+        <div class="flexbox">
+          <!-- header -->
+        </div>
+
+      </div>
+      <div class="table-responsive row">
+        <table class="table table-bordered table-hover" id="good_deal">
+          <thead class="thead-default thead-lg">
+            <tr>
+              <th>Designation</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+        </table>
+      </div>
+
+    </div>
+
+  </div>
+</div>
