--- a/src/app/pages/quotation/quotation-view/quotation-view.component.html
+++ b/src/app/pages/quotation/quotation-view/quotation-view.component.html
@@ -75,10 +75,9 @@
                     </td>
                     <td class="text-center">
                       <span [innerHTML]="item.qtyUI"></span>
-
                     </td>
                     <td>{{item.priceFn === 0 ? '-' : item.priceFn | currency:'MGA':'symbole':'4.2-2':'fr'}}</td>
-                    <td>{{item.discountTypeFn === 0 ? '-' : item.discountFn + '%'}}</td>
+                    <td>{{item.discountTypeFn === 0 || item.quantity === 0 ? '-' : item.discountFn + '%'}}</td>
                     <td class="text-right pr-4">
                       {{item.subTotalNetFn === 0 ? "Non disponible" : item.subTotalNetFn | currency:'MGA':'symbole':'4.2-2':'fr'}}
                     </td>
@@ -96,10 +95,12 @@
                     </th>
                     <th style="font-weight: normal">{{costTransport | currency:'MGA':'symbole':'4.2-2':'fr'}}</th>
                   </tr>
-                  <tr style="background-color: #ebedee;">
+                  <tr style="background-color: #ebedee;" *ngIf="hasRuptureItem || hasCommandItem">
                     <th colspan="4" class="pl-4">
-                      <small>*Cet article est en rupture de stock chez nous, nous vous tiendrons informé</small><br>
-                      <small>** Cet article est épuisé chez nous mais disponible sur commande</small>
+                      <small *ngIf="hasRuptureItem">*Cet article est en rupture de stock chez nous, nous vous tiendrons
+                        informé</small><br>
+                      <small *ngIf="hasCommandItem">** Cet article est épuisé chez nous mais disponible sur
+                        commande</small>
                     </th>
                     <th></th>
                   </tr>
