--- a/src/app/pages/good-deal/good-deal-lists/good-deal-lists.component.html
+++ b/src/app/pages/good-deal/good-deal-lists/good-deal-lists.component.html
@@ -1,7 +1,7 @@
 <div class="page-content fade-in-up">
   <div class="ibox">
     <div class="ibox-body">
-      <h5 class="font-strong mb-4">LES ANNONCES</h5>
+      <h5 class="font-strong mb-4">LES PETITES ANNONCES</h5>
       <div class="flexbox mb-4">
         <div class="flexbox">
         </div>
@@ -14,7 +14,7 @@
         <table class="table table-bordered table-hover" id="good_deal">
           <thead class="thead-default thead-lg">
             <tr>
-              <th>Designation</th>
+              <th>Service proposé</th>
               <th>Actions</th>
             </tr>
           </thead>
