--- a/src/app/pages/good-deal/good-deal-lists/good-deal-lists.component.html
+++ b/src/app/pages/good-deal/good-deal-lists/good-deal-lists.component.html
@@ -15,6 +15,7 @@
           <thead class="thead-default thead-lg">
             <tr>
               <th>Service proposé</th>
+              <th>Statut</th>
               <th>Actions</th>
             </tr>
           </thead>
